--- a/pluginxmly/xmly/src/main/res/values/strings.xml
+++ b/pluginxmly/xmly/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Xmly</string>
+    <!-- Music -->
+
+    <string name="mp.music.default_duration">00:00</string>
 </resources>
