--- a/pluginxmly/xmly/src/main/res/values/strings.xml
+++ b/pluginxmly/xmly/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- Music -->
 
     <string name="mp.music.default_duration">00:00</string>
+    <string name="expand_string">展开</string>
+    <string name="collapsed_string">收起</string>
 </resources>
