--- a/pluginrecord/record/src/main/res/values/strings.xml
+++ b/pluginrecord/record/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">VideoPlugin</string>
+    <string name="record_app_name">VideoPlugin</string>
 </resources>
